fix borders padding on mobile

--- a/assets/scss/components/_borders.scss
+++ b/assets/scss/components/_borders.scss
@@ -1,5 +1,6 @@
 .borders {
     margin-top: 30px;
+    padding: 2rem;
 
     &__countrys {
         margin-top: 10px;
